<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="2" >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_margin="4dp"
        android:layout_row="0"
        android:onClick="onButtonScanHiveClick"
        android:text="@string/scan_label" />

    <TextView
        android:id="@+id/textViewScannedHivesLabel"
        style="@style/TextBoxLabel"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_margin="4dp"
        android:layout_row="1"
        android:text="@string/label_scanned_hives_list" />

    <ListView
        android:id="@+id/listViewMoveHives"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_row="2" >
    </ListView>

    <TextView
        android:id="@+id/textViewMoveToLabel"
        style="@style/TextBoxLabel"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_margin="4dp"
        android:layout_row="3"
        android:text="@string/label_select_new_site" />

    <TextView
        android:id="@+id/textViewNewLocation"
        style="@style/TextBoxLabelNormal"
        android:layout_column="0"
        android:layout_gravity="center_vertical|left"
        android:layout_margin="4dp"
        android:layout_row="4"
        android:text="select site" />

    <ImageButton
        android:id="@+id/buttonSelectNewLocation"
        android:layout_column="1"
        android:layout_gravity="right"
        android:layout_row="4"
        android:contentDescription="@string/set_location_description"
        android:onClick="onButtonSetLocationClick"
        android:src="@drawable/nav_right_sml"
        android:text="" />

    <TextView
        android:id="@+id/textView101"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:text=" " />

</GridLayout>