<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message"
        android:layout_marginTop="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/label_enter_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
    <EditText
        android:id="@+id/editTextAppUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:maxLength="15"
        android:inputType="textCapWords"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnLoginClicked"
        android:text="@string/login_to_box" />

    

    

</RelativeLayout>